--- a/app/templates/services/dashboard.html
+++ b/app/templates/services/dashboard.html
@@ -2,8 +2,7 @@
 {% from 'macros/_breadcrumbs.html' import breadcrumb %}
 
 {% block breadcrumb %}
-  {{ breadcrumb([
-  ]) }}
+  {{ breadcrumb() }}
 {% endblock %}
 
 {% block main_content %}
