Add more information, address wording
This commit adds more information (description, ID) in order to
identify a service.

It also addresses comments that Ralph and Roz made on the wording.

--- a/app/templates/services/service.html
+++ b/app/templates/services/service.html
@@ -12,9 +12,11 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <header class="page-heading-smaller">
-        <p class="context">
-          Edit
-        </p>
+        {% if service_data.status == 'published' %}
+          <p class="context">
+            Edit
+          </p>
+        {% endif %}
         <h1>
           {{ service_data['serviceName'] }}
         </h1>
@@ -22,36 +24,70 @@
       <form>
         <fieldset class="question">
           <legend class="question-heading question-heading-with-hint ">
-            Service status
+            Choose service status
           </legend>
           <p class="hint">
-            If you hide your service it won't be accessible or show up in search
-            results
+            Private services don't appear in search results and are hidden
+            from public view
           </p>
           <label class="selection-button">
             <input type="radio" name="service_status" id="service_status_visible" value="visible" />
-            Visible
+            Public
           </label>
           <label class="selection-button">
             <input type="radio" name="service_status" id="service_status_hidden" value="hidden" />
-            Hidden
+            Private
           </label>
         </fieldset>
         <button type="submit" class="button-save">Save and return</button>
       </form>
       <div class="question">
-        <p class="question-heading question-heading-with-hint ">
-          Service status
-        </legend>
-        <p class="question-heading service-status-removed">
-          Removed
-        </p>
+        <h2 class="question-heading service-status-removed">
+          This service has been removed
+        </h2>
         <p class="hint">
-          If you are unsure why your service has been removed contact
+          If you don't know why this service has been removed, contact
           <a href="mailto:enquiries@digitalmarketplace.service.gov.uk">enquiries@digitalmarketplace.service.gov.uk</a>
         </p>
       </div>
-      <a href="{{ url_for(".dashboard") }}" class="return-link">Return to services</a>
+    </div>
+    <div class="column-one-whole">
+      <h2 class="summary-item-heading">
+        Service details
+      </h2>
+      <table class="summary-item-body">
+        <thead class="summary-item-field-headings">
+          <tr>
+              <th scope="col">
+                  <a href="">Name</a>
+              </th>
+              <th scope="col">
+                  Framework
+              </th>
+              <th scope="col">
+                  Lot
+              </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="summary-item-row">
+            <td class="summary-item-field-name">
+              Service ID
+            </td>
+            <td class="summary-item-field-content">
+              {{ service_data['id'] }}
+            </td>
+          </tr>
+          <tr class="summary-item-row">
+            <td class="summary-item-field-name">
+              Description
+            </td>
+            <td class="summary-item-field-content">
+              {{ service_data['serviceSummary'] }}
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 {% endblock %}
