Add one more answer macro as a stopgap
Was getting an error that 'radio' didn't exist as a macro, so I added
a 'radio' under 'radios'.  Seems like something that should be fixed.

--- a/app/templates/macros/answers.html
+++ b/app/templates/macros/answers.html
@@ -33,6 +33,10 @@
   {{ value }}
 {%- endmacro %}
 
+{# TODO: ask about this #}
+{% macro radio(value='') -%}
+  {{ value }}
+{%- endmacro %}
 
 {% macro boolean(value='') -%}
   {{ value }}
