Add POST route which does some error checking
Add form "id", input "name"s, and deal with errors
Without names in out inputs, it wasn't possible to back our answers.
Without our answers, it wasn't possible to do error-checking.

--- a/app/templates/services/create_service.html
+++ b/app/templates/services/create_service.html
@@ -33,7 +33,7 @@
     </div>
   {% endif %}
     <div class="column-two-thirds">
-      <form id="lots">
+      <form id="{{ name }}" method="POST">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
         {% include "toolkit/forms/selection-buttons.html" %}
         <button type="submit" class="button-save">Save and continue</button>
